--- a/taskApp/Base.lproj/Main.storyboard
+++ b/taskApp/Base.lproj/Main.storyboard
@@ -1,25 +1,74 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9R8-uQ-8NK">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Table View Controller-->
+        <scene sceneID="M3g-jx-nqS">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="9R8-uQ-8NK" customClass="TableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="57" sectionHeaderHeight="10" sectionFooterHeight="10" id="VW1-CA-edA">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PersonCell" rowHeight="57" id="mEo-IC-btb" customClass="PersonCell">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mEo-IC-btb" id="7o1-mt-hmJ">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bf4-Ti-bdr">
+                                            <rect key="frame" x="8" y="8" width="584" height="24"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7c-ZL-bQD">
+                                            <rect key="frame" x="8" y="32" width="584" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.50196081399917603" green="0.50196081399917603" blue="0.50196081399917603" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="j7c-ZL-bQD" firstAttribute="top" secondItem="bf4-Ti-bdr" secondAttribute="bottom" constant="-1" id="3e2-9X-B1K"/>
+                                        <constraint firstAttribute="bottom" secondItem="j7c-ZL-bQD" secondAttribute="bottom" constant="6.5" id="5qo-2U-4cV"/>
+                                        <constraint firstAttribute="trailing" secondItem="j7c-ZL-bQD" secondAttribute="trailing" constant="8" id="C2Z-6F-kgO"/>
+                                        <constraint firstItem="bf4-Ti-bdr" firstAttribute="top" secondItem="7o1-mt-hmJ" secondAttribute="topMargin" id="CCR-q6-Nra"/>
+                                        <constraint firstItem="bf4-Ti-bdr" firstAttribute="trailing" secondItem="7o1-mt-hmJ" secondAttribute="trailingMargin" id="IIR-GH-KU7"/>
+                                        <constraint firstItem="j7c-ZL-bQD" firstAttribute="top" secondItem="bf4-Ti-bdr" secondAttribute="bottom" id="KYI-HJ-Vsr"/>
+                                        <constraint firstItem="j7c-ZL-bQD" firstAttribute="leading" secondItem="7o1-mt-hmJ" secondAttribute="leading" constant="8" id="PSl-1B-xtY"/>
+                                        <constraint firstItem="bf4-Ti-bdr" firstAttribute="leading" secondItem="7o1-mt-hmJ" secondAttribute="leadingMargin" id="WZX-za-xnS"/>
+                                        <constraint firstAttribute="trailing" secondItem="j7c-ZL-bQD" secondAttribute="trailing" constant="8" id="bjy-bC-AmT"/>
+                                        <constraint firstAttribute="bottom" secondItem="j7c-ZL-bQD" secondAttribute="bottom" constant="7.5" id="hap-sx-On8"/>
+                                        <constraint firstItem="j7c-ZL-bQD" firstAttribute="leading" secondItem="7o1-mt-hmJ" secondAttribute="leading" constant="8" id="wzL-GE-4oY"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="3e2-9X-B1K"/>
+                                            <exclude reference="C2Z-6F-kgO"/>
+                                            <exclude reference="hap-sx-On8"/>
+                                            <exclude reference="wzL-GE-4oY"/>
+                                        </mask>
+                                    </variation>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="name" destination="bf4-Ti-bdr" id="bqX-fJ-NDk"/>
+                                    <outlet property="subtitle" destination="j7c-ZL-bQD" id="Z29-79-JuZ"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="9R8-uQ-8NK" id="CNw-FO-0JU"/>
+                            <outlet property="delegate" destination="9R8-uQ-8NK" id="0pR-U3-Udn"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HuV-lB-9fe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="859" y="359"/>
         </scene>
     </scenes>
 </document>
